--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         </section>
 
         <footer>
-            <div class="foot foot1">
+            <div class="foot">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, libero!
             </div>
-            <div class="foot foot2">
+            <div class="foot">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, libero!
             </div>
-            <div class="foot foot3">
+            <div class="foot">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, libero!
             </div>
 
